# aqua-weight

./: .coveragerc  .dockerignore  .gitignore  .output.txt  .pre-commit-config.ci.yaml  .pre-commit-config.yaml  .tool-versions  CALIBRATION.md  Makefile  README.md  SECURITY.md  TEST.md  TESTING_STRATEGY.md  TEST_PLAN.md  backend-coverage.xml  coverage_report.json  docker-compose.test.yml  docker-compose.yml  pyproject.toml  test_main.http
.github/workflows/: ci.yml  e2e.yml
.hypothesis/examples/0e28190e4f98d31e/: 1cc062ccf1360404  27e0c9d55308c9c3  32bec2a3b10ecc8b  3ee660b5159286b4  71fbb290bb9d9452  931857c2ddc4e2f3  9f35ea26b0bb827b
.hypothesis/examples/1368f0310799c508/: f680b1df65b4f332
.hypothesis/examples/8a5a43db9a390d71/: 0d99b967561cee8f  2f0283d40a0a15c3  8885ae35dc8050c2  9f9475e46056ded7  ae338dbf4a212571  d6ed68a436c6e0a3  fc76956fa8798fb3
.hypothesis/examples/946e9fa229462b29/: 9c5a8419de9de4c2  f1f8872019756f58
.hypothesis/examples/aca07239e9e1504f/: 0769690da547ec7f  1732941c79dc4b5d  1bd0f4286655dd92  257fc64afbdc8623  258cb01d165493ab  25ca21575bbb8a62  283e78ef4bf5a04c  2e190d6e4ca574ad  2f0a1c3eaa3f7a66  3470a20eac1b87a6  58681b95d56c2c23  5a42e777cc0c0a19  5da84775219cb8c2  7c37a2a2af833001  a6eeb0501d36467c  a765e4f4ef4a2899  a8c08e6f9fdad505  b8425622fe69d8c6  c3a8a61b26846ba3  d726112820811a12  e5d6d01a89a6b24a  f3a49dad58dbeebf  f7f384d5010348f6  f8184b2cb180cc87
.hypothesis/examples/c1684505e9873a96/: 1a44a732d50f8811
backend/: Dockerfile  Dockerfile.test  TESTING.md  requirements-dev.txt  requirements-tests.txt  requirements.txt
backend/app/: errors.py  main.py  main_monolith.py  security.py
backend/app/db/: __init__.py  core.py  deps.py  ids.py
backend/app/helpers/: calibration.py  frequency.py  last_plant_event.py  last_repotting.py  plants_list.py  water_loss.py  water_retained.py  water_weight.py  watering.py  watering_maximum.py  weighing.py  weight_minimum.py
backend/app/routes/: daily.py  health.py  locations.py  measurements.py  plants.py  repotting.py  test_admin.py
backend/app/schemas/: location.py  measurement.py  plant.py
backend/app/services/: measurements.py
backend/app/utils/: date_time.py  db_utils.py  settings_defaults.py
backend/tests/: conftest.py  test_daily_routes.py  test_date_time.py  test_health.py  test_measurements_router_di.py  test_measurements_routes_full.py  test_water_loss.py  test_watering_approximation.py
backend/tests/factories/: __init__.py  measurement.py  plant.py
backend/tests/integration/: test_locations_routes.py  test_plants_routes.py
backend/tests/routes/: test_measurements_corrections_and_calibration.py  test_measurements_invalid_create.py  test_plants_error_paths.py  test_plants_hex_bytes.py  test_plants_hex_bytes_exceptions.py  test_plants_hex_bytes_invalid_unit.py  test_plants_list_endpoints.py  test_repotting.py  test_repotting_close_excepts.py  test_test_admin_routes.py
backend/tests/unit/: test_calibration.py  test_date_time_prop.py  test_db_core.py  test_db_core_defensive.py  test_db_core_extra.py  test_db_ids.py  test_errors_handlers.py  test_frequency.py  test_last_plant_event.py  test_measurements_service.py  test_measurements_service_lines.py  test_measurements_service_prop.py  test_plants_list.py  test_plants_list_close.py  test_plants_list_next_watering.py  test_plants_list_params_restore.py  test_routes_health.py  test_security.py  test_settings_defaults.py  test_utils_date_time.py  test_water_loss_branches.py  test_water_retained.py  test_water_weight.py  test_watering_helper.py  test_watering_maximum.py  test_weighing.py  test_weight_minimum.py
db/init/: 00-create-dbs.sql  10-schema-runtime.sql  11-schema-test.sql  20-grants.sql  schema.sql
frontend/: .eslintrc.cjs  .prettierignore  Dockerfile  TESTING.md  babel.config.cjs  eslint.config.mjs  index.html  jest.config.cjs  package-lock.json  package.json  playwright.config.ts  setupTests.ts  vite.config.js  vite.config.ts  vitest.config.ts
frontend/.storybook/: main.ts  preview.jsx
frontend/coverage/: index.html  lcov.info
frontend/coverage/lcov-report/: index.html
frontend/coverage/src/: App.jsx.html  ThemeContext.jsx.html  index.html  main.jsx.html  setupTests.js.html
frontend/playwright-report/: index.html
frontend/src/: App.jsx  ThemeContext.jsx  main.jsx  setupTests.js
frontend/src/__tests__/: NumberInput.test.jsx  PlantsList.test.jsx  Select.test.jsx  TextInput.test.jsx
frontend/src/api/: calibration.js  client.js  daily.js  locations.js  measurements.js  plants.js  reference.js
frontend/src/components/: Badge.jsx  BulkMeasurementTable.jsx  Chip.jsx  ConfirmDialog.jsx  DashboardLayout.jsx  DateTimeText.jsx  DriftNotification.jsx  IconButton.jsx  PageHeader.jsx  Pagination.jsx  PlantSelect.jsx  PlantsTableBase.jsx  QuickCreateButtons.jsx  SearchField.jsx  Sparkline.jsx  StatusIcon.jsx  WateringTimeBar.jsx
frontend/test-results/: .last-run.json
nginx/: Dockerfile  nginx.conf
scripts/: compile-requirements.sh  dependency-audit.sh  gen-dev-certs.sh  gen-local-cert.sh  prepare-commit-msg
ssl/: .gitkeep  README.md
(+273 files in other folders)
